unpackaged/main/default/objects/metazoa_snapshot_sprint__c/fields/metazoa_actual_finish__c.field-meta.xml
<CustomField>
	<fullName>metazoa_actual_finish__c</fullName>
	<label>Actual Finish</label>
	<summarizedField>metazoa_snapshot_story__c.metazoa_finish_date__c</summarizedField>
	<summaryForeignKey>metazoa_snapshot_story__c.metazoa_snapshot_sprint__c</summaryForeignKey>
	<summaryOperation>max</summaryOperation>
	<type>Summary</type>
</CustomField>