unpackaged/main/default/objects/metazoa_snapshot_sprint__c/fields/metazoa_actual_start__c.field-meta.xml
<CustomField>
	<fullName>metazoa_actual_start__c</fullName>
	<label>Actual Start</label>
	<summarizedField>metazoa_snapshot_story__c.metazoa_start_date__c</summarizedField>
	<summaryForeignKey>metazoa_snapshot_story__c.metazoa_snapshot_sprint__c</summaryForeignKey>
	<summaryOperation>min</summaryOperation>
	<type>Summary</type>
</CustomField>