unpackaged/main/default/objects/metazoa_snapshot_sprint__c/fields/metazoa_archive_flag__c.field-meta.xml
<CustomField>
	<fullName>metazoa_archive_flag__c</fullName>
	<defaultValue>false</defaultValue>
	<label>Archive Flag</label>
	<type>Checkbox</type>
</CustomField>