unpackaged/main/default/objects/metazoa_snapshot_sprint__c/fields/metazoa_broadcast_sprint__c.field-meta.xml
<CustomField>
	<fullName>metazoa_broadcast_sprint__c</fullName>
	<defaultValue>false</defaultValue>
	<label>Broadcast Sprint Changes</label>
	<type>Checkbox</type>
</CustomField>