unpackaged/main/default/objects/metazoa_snapshot_sprint__c/fields/metazoa_burndown_graph__c.field-meta.xml
<CustomField>
	<fullName>metazoa_burndown_graph__c</fullName>
	<label>Burndown Graph</label>
	<length>30000</length>
	<type>LongTextArea</type>
</CustomField>