unpackaged/main/default/objects/metazoa_snapshot_sprint__c/fields/metazoa_extra_field_one__c.field-meta.xml
<CustomField>
	<fullName>metazoa_extra_field_one__c</fullName>
	<label>Extra Field One</label>
	<length>200</length>
	<type>Text</type>
</CustomField>