unpackaged/main/default/objects/metazoa_snapshot_sprint__c/fields/metazoa_extra_flag_two__c.field-meta.xml
<CustomField>
	<fullName>metazoa_extra_flag_two__c</fullName>
	<defaultValue>false</defaultValue>
	<label>Extra Flag Two</label>
	<type>Checkbox</type>
</CustomField>