unpackaged/main/default/objects/metazoa_snapshot_sprint__c/fields/metazoa_finish_date__c.field-meta.xml
<CustomField>
	<fullName>metazoa_finish_date__c</fullName>
	<label>Finish Date</label>
	<type>Date</type>
</CustomField>