unpackaged/main/default/objects/metazoa_snapshot_sprint__c/fields/metazoa_master_branch__c.field-meta.xml
<CustomField>
	<fullName>metazoa_master_branch__c</fullName>
	<label>Master Branch</label>
	<length>200</length>
	<type>Text</type>
</CustomField>