unpackaged/main/default/objects/metazoa_snapshot_sprint__c/fields/metazoa_partial_deployments__c.field-meta.xml
<CustomField>
	<fullName>metazoa_partial_deployments__c</fullName>
	<defaultValue>false</defaultValue>
	<label>Partial Deployments</label>
	<type>Checkbox</type>
</CustomField>