unpackaged/main/default/objects/metazoa_snapshot_sprint__c/fields/metazoa_percent_complete__c.field-meta.xml
<CustomField>
	<fullName>metazoa_percent_complete__c</fullName>
	<formula>metazoa_actual_work__c / metazoa_planned_work__c</formula>
	<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
	<label>Percent Complete</label>
	<precision>18</precision>
	<scale>2</scale>
	<type>Percent</type>
</CustomField>