unpackaged/main/default/objects/metazoa_snapshot_sprint__c/fields/metazoa_planned_work__c.field-meta.xml
<CustomField>
	<fullName>metazoa_planned_work__c</fullName>
	<label>Planned Work</label>
	<summarizedField>metazoa_snapshot_story__c.metazoa_planned_work__c</summarizedField>
	<summaryForeignKey>metazoa_snapshot_story__c.metazoa_snapshot_sprint__c</summaryForeignKey>
	<summaryOperation>sum</summaryOperation>
	<type>Summary</type>
</CustomField>