unpackaged/main/default/objects/metazoa_snapshot_sprint__c/fields/metazoa_sprint_owner__c.field-meta.xml
<CustomField>
	<fullName>metazoa_sprint_owner__c</fullName>
	<deleteConstraint>SetNull</deleteConstraint>
	<label>Sprint Owner</label>
	<referenceTo>User</referenceTo>
	<relationshipName>Snapshot_Sprints_User</relationshipName>
	<type>Lookup</type>
</CustomField>