unpackaged/main/default/objects/metazoa_snapshot_sprint__c/fields/metazoa_start_date__c.field-meta.xml
<CustomField>
	<fullName>metazoa_start_date__c</fullName>
	<label>Start Date</label>
	<type>Date</type>
</CustomField>