unpackaged/main/default/objects/metazoa_snapshot_sprint__c/fields/metazoa_total_deployments__c.field-meta.xml
<CustomField>
	<fullName>metazoa_total_deployments__c</fullName>
	<label>Total Deployments</label>
	<summaryForeignKey>metazoa_snapshot_history__c.metazoa_snapshot_sprint__c</summaryForeignKey>
	<summaryOperation>count</summaryOperation>
	<type>Summary</type>
</CustomField>