unpackaged/main/default/objects/metazoa_snapshot_sprint__c/fields/metazoa_total_stories__c.field-meta.xml
<CustomField>
	<fullName>metazoa_total_stories__c</fullName>
	<label>Total Stories</label>
	<summaryForeignKey>metazoa_snapshot_story__c.metazoa_snapshot_sprint__c</summaryForeignKey>
	<summaryOperation>count</summaryOperation>
	<type>Summary</type>
</CustomField>