unpackaged/main/default/objects/metazoa_snapshot_sprint__c/fields/metazoa_work_days__c.field-meta.xml
<CustomField>
	<fullName>metazoa_work_days__c</fullName>
	<label>Work Days</label>
	<length>30000</length>
	<type>LongTextArea</type>
</CustomField>